--- a/src/components/nav-bar/navBar.scss
+++ b/src/components/nav-bar/navBar.scss
@@ -1,7 +1,60 @@
-.nav-bar-container{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    height: 100%;
-    width: 100%;
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 18px 10%;
+    background-color:#313131;
+}
 
-    background-color: red;
+.logo {
+    cursor: pointer;
+    color: #fff;
+}
+
+.menu {
+    list-style: none;
+}
+
+.menu {
+    li {
+        display: inline-block;
+        padding: 0px 20px;
+    }
+}
+
+.menu {
+    li {
+        a {
+            color: #fff;
+            text-decoration: none;
+            transition: all 0.3s ease 0s;
+        }
+    }
+}
+
+.menu {
+    li {
+        a:hover {
+            color: gray;
+        }
+    }
+}
+
+#Admin {
+    padding: 10px 20px;
+    background-color: rgba($color: #ff921e, $alpha: 1.0);
+    border: none;
+    border-radius: 50px;
+    transition: all 0.3s ease 0s;
+    color: #fff;
+}
+
+#Admin:hover {
+    background-color: rgba($color: #ff921e, $alpha: 0.6);
 }
