home page visual update

--- a/src/components/nav-bar/navBar.scss
+++ b/src/components/nav-bar/navBar.scss
@@ -9,7 +9,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 18px 10%;
-    background-color:#313131;
+    background-color:#b56310;
 }
 
 .logo {
