--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -1,28 +1,36 @@
+@import url("https://fonts.googleapis.com/css2?family=GFS+Didot&family=Rubik+Bubbles&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1rem solid #a35805;
 
+  border-radius: 8rem;
+  width: 23rem;
+  height: 30rem;
+  margin: 2rem 2rem;
+  font-family: 'Mochiy Pop One', sans-serif;
+  font-size: xx-large;
+  background-color: #edb87e;
+  box-shadow: 10px 15px 30px grey;
+  .photo {
+    height: 18rem;
+    border-radius: 4rem;
+    //padding: 1rem;
+    border: 1rem solid #ff921e;
+  }
+}
 
-.card-container {
-    display: flex;
-    flex-direction: column;
+.welcome{
     text-align: center;
-    background-color: #95dada;
-    border: 1px solid grey;
-    border-radius: 5px;
-    padding: 25px;
-    cursor: pointer;
-    -moz-osx-font-smoothing: grayscale;
-    backface-visibility: hidden;
-    transform: translateZ(0);
-    transition: transform 0.25s ease-out;
-  }
-  
-  .card-container:hover {
-    transform: scale(1.05);
-  }
-
-
-  .photo{
-    display: flex;
-    align-self: center;
-    height: 8rem;
-    width: 8rem;
-  }
+    font-family: 'Mochiy Pop One', sans-serif;
+    margin: 2rem;
+}
