pointer cursor added

--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -22,6 +22,7 @@
   background-color: #edb87e;
   box-shadow: 10px 15px 30px grey;
   transition: 0.5s;
+  cursor: pointer;
   .photo {
     height: 18rem;
     border-radius: 4rem;
